syntax = "proto3";

option csharp_namespace = "ServerAdmin";

package greet;

// The greeting service definition.
service Greeter {
  rpc CreateGame (Request) returns (GameResponse);
  rpc UpdateGame (Request) returns (GameResponse);
  rpc BuyGame (Request) returns (Response);
  rpc EvaluateGame (Request) returns (Response);
  rpc Show (Request) returns (Response);
  rpc Search (Request) returns (Response);
  rpc ShowAllGames (Request) returns (Response);
  rpc ReviewsGame (Request) returns (Response);
  rpc DeleteGame (Request) returns (Response);
  rpc BoughtGames (Request) returns (Response);
  rpc Register (Request) returns (ResponseClient);
  rpc Login (Request) returns (ResponseClient);
  rpc LogOut (Request) returns (Response);
  rpc ShowAllUsers (Request) returns (Response);
  rpc DeleteUser (Request) returns (Response);
  rpc UpdateUser (Request) returns (ResponseClient);
  rpc UpdateRoute(Request) returns (Response);
  rpc AsociateGame(RequestClient) returns (Response);

}

message Request {
  string attributes = 1;
  string name = 2;
}


message Response {
  string message = 1;
  int32 status = 2;
}

message ResponseClient {
  string name = 1;
  string message = 2;
  int32 status = 3;
  string password = 4;
}

message GameResponse {
	string message = 1;
	int32 status = 2;
	string title = 3;
	string gender = 4;
	string sinopsis = 5;
}

message RequestClient{
	string name = 1;
	string client = 2;
	string attributes = 3;
}


